# androkit

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: rust-tests.yml
scripts/: prepare_release.py
src/: adb.rs  apk.rs  error.rs  exec.rs  gradle.rs  lib.rs  manifest.rs  model.rs  project.rs
src/project/: cache.rs  dsl.rs
tests/: discovery.rs
tests/fixtures/groovy-apply-plugin/: settings.gradle
tests/fixtures/groovy-apply-plugin/app/: build.gradle
tests/fixtures/groovy-apply-plugin/app/src/main/: AndroidManifest.xml
tests/fixtures/kts-flavors/: settings.gradle.kts
tests/fixtures/kts-flavors/app/: build.gradle.kts
tests/fixtures/kts-flavors/app/src/main/: AndroidManifest.xml
tests/fixtures/kts-simple/: settings.gradle.kts
tests/fixtures/kts-simple/app/: build.gradle.kts
tests/fixtures/kts-simple/app/src/main/: AndroidManifest.xml
tests/fixtures/multi-variant/: settings.gradle
tests/fixtures/multi-variant/app/: build.gradle
tests/fixtures/multi-variant/app/src/main/: AndroidManifest.xml
tests/fixtures/multi-variant/core/: build.gradle
tests/fixtures/single-module/: build.gradle
tests/fixtures/single-module/src/main/: AndroidManifest.xml
